--- a/predict.ipynb
+++ b/predict.ipynb
@@ -2,27 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import firebase_admin\n",
-    "from firebase_admin import credentials\n",
-    "from firebase_admin import firestore\n",
     "import pandas as pd\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import GradientBoostingClassifier, RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from time import time\n",
+    "\n",
+    "import warnings\n",
+    "\n",
+    "# Ignore all warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "scaler = StandardScaler()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -86,206 +93,225 @@
     }
    ],
    "source": [
-    "# read csv file\n",
-    "data = pd.read_csv('modified_weatherAUS.csv')\n",
-    "df = pd.DataFrame(data)\n",
+    "# Load data from CSV file\n",
+    "df = pd.read_csv('modified_weatherAUS.csv')\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        MinTemp  MaxTemp  Rainfall  WindGustSpeed  WindSpeed9am  WindSpeed3pm  \\\n",
-      "0          13.4     22.9       0.6           44.0          20.0          24.0   \n",
-      "1           7.4     25.1       0.0           44.0           4.0          22.0   \n",
-      "2          12.9     25.7       0.0           46.0          19.0          26.0   \n",
-      "3           9.2     28.0       0.0           24.0          11.0           9.0   \n",
-      "4          17.5     32.3       1.0           41.0           7.0          20.0   \n",
-      "...         ...      ...       ...            ...           ...           ...   \n",
-      "112955      3.5     21.8       0.0           31.0          15.0          13.0   \n",
-      "112956      2.8     23.4       0.0           31.0          13.0          11.0   \n",
-      "112957      3.6     25.3       0.0           22.0          13.0           9.0   \n",
-      "112958      5.4     26.9       0.0           37.0           9.0           9.0   \n",
-      "112959      7.8     27.0       0.0           28.0          13.0           7.0   \n",
-      "\n",
-      "        Humidity9am  Humidity3pm  Pressure9am  Pressure3pm  ...  \\\n",
-      "0              71.0         22.0       1007.7       1007.1  ...   \n",
-      "1              44.0         25.0       1010.6       1007.8  ...   \n",
-      "2              38.0         30.0       1007.6       1008.7  ...   \n",
-      "3              45.0         16.0       1017.6       1012.8  ...   \n",
-      "4              82.0         33.0       1010.8       1006.0  ...   \n",
-      "...             ...          ...          ...          ...  ...   \n",
-      "112955         59.0         27.0       1024.7       1021.2  ...   \n",
-      "112956         51.0         24.0       1024.6       1020.3  ...   \n",
-      "112957         56.0         21.0       1023.5       1019.1  ...   \n",
-      "112958         53.0         24.0       1021.0       1016.8  ...   \n",
-      "112959         51.0         24.0       1019.4       1016.5  ...   \n",
-      "\n",
-      "        WindDir3pm_SSE  WindDir3pm_SSW  WindDir3pm_SW  WindDir3pm_W  \\\n",
-      "0                    0               0              0             0   \n",
-      "1                    0               0              0             0   \n",
-      "2                    0               0              0             0   \n",
-      "3                    0               0              0             0   \n",
-      "4                    0               0              0             0   \n",
-      "...                ...             ...            ...           ...   \n",
-      "112955               0               0              0             0   \n",
-      "112956               0               0              0             0   \n",
-      "112957               0               0              0             0   \n",
-      "112958               0               0              0             0   \n",
-      "112959               0               0              0             0   \n",
-      "\n",
-      "        WindDir3pm_WNW  WindDir3pm_WSW  RainToday_No  RainToday_Yes  \\\n",
-      "0                    1               0             1              0   \n",
-      "1                    0               1             1              0   \n",
-      "2                    0               1             1              0   \n",
-      "3                    0               0             1              0   \n",
-      "4                    0               0             1              0   \n",
-      "...                ...             ...           ...            ...   \n",
-      "112955               0               0             1              0   \n",
-      "112956               0               0             1              0   \n",
-      "112957               0               0             1              0   \n",
-      "112958               1               0             1              0   \n",
-      "112959               0               0             1              0   \n",
-      "\n",
-      "        RainTomorrow_No  RainTomorrow_Yes  \n",
-      "0                     1                 0  \n",
-      "1                     1                 0  \n",
-      "2                     1                 0  \n",
-      "3                     1                 0  \n",
-      "4                     1                 0  \n",
-      "...                 ...               ...  \n",
-      "112955                1                 0  \n",
-      "112956                1                 0  \n",
-      "112957                1                 0  \n",
-      "112958                1                 0  \n",
-      "112959                1                 0  \n",
-      "\n",
-      "[112960 rows x 69 columns]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0         No\n",
+       "1         No\n",
+       "2         No\n",
+       "3         No\n",
+       "4         No\n",
+       "          ..\n",
+       "112955    No\n",
+       "112956    No\n",
+       "112957    No\n",
+       "112958    No\n",
+       "112959    No\n",
+       "Name: RainTomorrow, Length: 112960, dtype: object"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Remove irrelevant columns\n",
-    "df = df.drop(columns=[ \"id\",\"Date\", \"Location\"])\n",
-    "# Encode categorical variables\n",
-    "df = pd.get_dummies(df, columns=[\"WindGustDir\", \"WindDir9am\", \"WindDir3pm\", \"RainToday\", \"RainTomorrow\"])\n",
-    "print(df)"
+    "# Select features and target\n",
+    "features = ['Location', 'MinTemp', 'MaxTemp', 'Rainfall', 'WindGustDir', 'WindGustSpeed', \n",
+    "            'WindDir9am', 'WindDir3pm', 'WindSpeed9am', 'WindSpeed3pm', 'Humidity9am', \n",
+    "            'Humidity3pm', 'Pressure9am', 'Pressure3pm', 'Temp9am', 'Temp3pm', 'RainToday',\n",
+    "            'AvgTemp', 'AvgWind', 'AvgRainfall', 'AvgHumidity', 'AvgPressure']\n",
+    "target = 'RainTomorrow'\n",
+    "X = df[features]\n",
+    "y = df[target]\n",
+    "X\n",
+    "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert categorical features to numerical using LabelEncoder\n",
+    "categorical_features = ['Location', 'WindGustDir', 'WindDir9am', 'WindDir3pm', 'RainToday']\n",
+    "encoders = {}\n",
+    "for feature in categorical_features:\n",
+    "    encoders[feature] = LabelEncoder()\n",
+    "    X[feature] = encoders[feature].fit_transform(X[feature])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2271       No\n",
+       "99471      No\n",
+       "10025      No\n",
+       "31065      No\n",
+       "15044      No\n",
+       "         ... \n",
+       "104759    Yes\n",
+       "94672     Yes\n",
+       "34203     Yes\n",
+       "112605    Yes\n",
+       "101040     No\n",
+       "Name: RainTomorrow, Length: 22592, dtype: object"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split data into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train\n",
+    "X_test\n",
+    "y_train\n",
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0         0\n",
-      "1         0\n",
-      "2         0\n",
-      "3         0\n",
-      "4         0\n",
-      "         ..\n",
-      "112955    0\n",
-      "112956    0\n",
-      "112957    0\n",
-      "112958    0\n",
-      "112959    0\n",
-      "Name: RainTomorrow_Yes, Length: 112960, dtype: uint8\n"
+      "Time taken to construct decision tree model: 1.1957478523254395 seconds\n",
+      "Classification report for decision tree model:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          No       0.87      0.86      0.86     17715\n",
+      "         Yes       0.51      0.54      0.52      4877\n",
+      "\n",
+      "    accuracy                           0.79     22592\n",
+      "   macro avg       0.69      0.70      0.69     22592\n",
+      "weighted avg       0.79      0.79      0.79     22592\n",
+      "\n",
+      "Confusion matrix for decision tree model:\n",
+      "[[15148  2567]\n",
+      " [ 2230  2647]]\n",
+      "Time taken to construct gradient boosting model: 19.50440502166748 seconds\n",
+      "Classification report for gradient boosting model:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          No       0.87      0.95      0.91     17715\n",
+      "         Yes       0.73      0.51      0.60      4877\n",
+      "\n",
+      "    accuracy                           0.85     22592\n",
+      "   macro avg       0.80      0.73      0.75     22592\n",
+      "weighted avg       0.84      0.85      0.84     22592\n",
+      "\n",
+      "Confusion matrix for gradient boosting model:\n",
+      "[[16798   917]\n",
+      " [ 2405  2472]]\n",
+      "Time taken to construct random forest model: 13.532151937484741 seconds\n",
+      "Classification report for random forest model:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          No       0.88      0.95      0.91     17715\n",
+      "         Yes       0.74      0.52      0.61      4877\n",
+      "\n",
+      "    accuracy                           0.86     22592\n",
+      "   macro avg       0.81      0.73      0.76     22592\n",
+      "weighted avg       0.85      0.86      0.85     22592\n",
+      "\n",
+      "Confusion matrix for random forest model:\n",
+      "[[16825   890]\n",
+      " [ 2361  2516]]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "# Split the data into features and target variable\n",
-    "X = df.drop(columns=[\"RainTomorrow_Yes\"])\n",
-    "y = df[\"RainTomorrow_Yes\"]\n",
-    "print(y)\n",
-    "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.8, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create decision tree model\n",
+    "# Scale numeric features using StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "numeric_features = list(set(features) - set(categorical_features))\n",
+    "X_train[numeric_features] = scaler.fit_transform(X_train[numeric_features])\n",
+    "X_test[numeric_features] = scaler.transform(X_test[numeric_features])\n",
+    "\n",
+    "# Train decision tree classifier and predict on test set\n",
     "dt_model = DecisionTreeClassifier(random_state=42)\n",
+    "start_time = time()\n",
+    "dt_model.fit(X_train, y_train)\n",
+    "end_time = time()\n",
+    "print('Time taken to construct decision tree model:', end_time - start_time, 'seconds')\n",
+    "dt_predict = dt_model.predict(X_test)\n",
+    "print('Classification report for decision tree model:')\n",
+    "print(classification_report(y_test, dt_predict))\n",
+    "print('Confusion matrix for decision tree model:')\n",
+    "print(confusion_matrix(y_test, dt_predict))\n",
     "\n",
     "# Create gradient boosting model\n",
     "gb_model = GradientBoostingClassifier(random_state=42)\n",
+    "start_time = time()\n",
+    "gb_model.fit(X_train, y_train)\n",
+    "end_time = time()\n",
+    "print('Time taken to construct gradient boosting model:', end_time - start_time, 'seconds')\n",
+    "gb_predict = gb_model.predict(X_test)\n",
+    "print('Classification report for gradient boosting model:')\n",
+    "print(classification_report(y_test, gb_predict))\n",
+    "print('Confusion matrix for gradient boosting model:')\n",
+    "print(confusion_matrix(y_test, gb_predict))\n",
     "\n",
     "# Create random forest model\n",
-    "rf_model = RandomForestClassifier(random_state=42)"
+    "rf_model = RandomForestClassifier(random_state=42)\n",
+    "start_time = time()\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "end_time = time()\n",
+    "print('Time taken to construct random forest model:', end_time - start_time, 'seconds')\n",
+    "rf_predict = rf_model.predict(X_test)\n",
+    "print('Classification report for random forest model:')\n",
+    "print(classification_report(y_test, rf_predict))\n",
+    "print('Confusion matrix for random forest model:')\n",
+    "print(confusion_matrix(y_test, rf_predict))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Train decision tree model\n",
-    "# dt_model.fit(X_train, y_train)\n",
-    "\n",
-    "# # Train gradient boosting model\n",
-    "# gb_model.fit(X_train, y_train)\n",
-    "\n",
-    "# # Train random forest model\n",
-    "# rf_model.fit(X_train, y_train)\n",
-    "\n",
-    "# create the cross-validation objects\n",
-    "cv = 5  # number of folds\n",
-    "dt_cv = cross_val_score(dt_model, X_train, y_train, cv=cv)\n",
-    "gb_cv = cross_val_score(gb_model, X_train, y_train, cv=cv)\n",
-    "rf_cv = cross_val_score(rf_model, X_train, y_train, cv=cv)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decision Tree accuracy: 1.000\n",
-      "Gradient Boosting accuracy: 1.000\n",
-      "Random Forest accuracy: 1.000\n"
+      "decision tree accuracy: 0.7876682011331445\n",
+      "gradient boosting accuracy: 0.8529567988668555\n",
+      "random forest accuracy: 0.8560995042492918\n"
      ]
     }
    ],
    "source": [
-    "# # Evaluate decision tree model\n",
-    "# dt_pred = dt_model.predict(X_test)\n",
-    "# dt_acc = accuracy_score(y_test, dt_pred)\n",
+    "# Evaluate accuracy\n",
+    "dt_acc = accuracy_score(y_test, dt_predict)\n",
+    "gb_acc = accuracy_score(y_test, gb_predict)\n",
+    "rf_acc = accuracy_score(y_test, rf_predict)\n",
     "\n",
-    "# # Evaluate gradient boosting model\n",
-    "# gb_pred = gb_model.predict(X_test)\n",
-    "# gb_acc = accuracy_score(y_test, gb_pred)\n",
-    "\n",
-    "# # Evaluate randomforest model\n",
-    "# rf_pred = rf_model.predict(X_test)\n",
-    "# rf_acc = accuracy_score(y_test, rf_pred)\n",
-    "\n",
-    "# print(\"Decision Tree accuracy:\", dt_acc)\n",
-    "# print(\"Gradient Boosting accuracy:\", gb_acc)\n",
-    "# print(\"Random Forest accuracy:\", rf_acc)\n",
-    "\n",
-    "# print the cross-validation scores\n",
-    "print(f\"Decision Tree accuracy: {dt_cv.mean():.3f}\")\n",
-    "print(f\"Gradient Boosting accuracy: {gb_cv.mean():.3f}\")\n",
-    "print(f\"Random Forest accuracy: {rf_cv.mean():.3f}\")"
+    "print('decision tree accuracy:', dt_acc)\n",
+    "print('gradient boosting accuracy:', gb_acc)\n",
+    "print('random forest accuracy:', rf_acc)\n"
    ]
   }
  ],
